--- a/haley-matt/styles/layout.css
+++ b/haley-matt/styles/layout.css
@@ -1,84 +1,86 @@
-html, body {
-  width: 100%;
-  font-family: helvetica;
-}
+@media only screen and (max-width: 640px) {
+  html, body {
+    width: 100%;
+    font-family: helvetica;
+  }
 
-header{
-  background: #ffe680;
-  padding: 1.5%;
-}
+  header{
+    background: #ffe680;
+    padding: 1.5%;
+  }
 
-.title{
-  background-color: white;
-}
+  .title{
+    background-color: white;
+  }
 
-ul {
-  /* this is a hack for collapsing space between inline block elements */
-  font-size: 0;
-  padding-left: 1%;
-}
+  ul {
+    /* this is a hack for collapsing space between inline block elements */
+    font-size: 0;
+    padding-left: 1%;
+  }
 
-li {
-  font-size: 1.5rem;
-  letter-spacing: normal;
-  list-style: none;
-  display: inline-block;
-  padding: 1%;
-}
+  li {
+    font-size: 1.5rem;
+    letter-spacing: normal;
+    list-style: none;
+    display: inline-block;
+    padding: 1%;
+  }
 
-a {
-  text-decoration: none;
-  color: gray;
-}
+  a {
+    text-decoration: none;
+    color: gray;
+  }
 
-.nav-ul {
-  display: none;
-}
-
-nav:hover .nav-ul {
-  display: block;
-} 
-
-.hamburger {
-  display: block;
-}
-
-@media only screen and (min-width: 640px) {
   .nav-ul {
+    display: none;
+  }
+
+  nav:hover .nav-ul {
+    display: block;
+  } 
+
+  .hamburger {
     display: block;
   }
 
-  .hamburger {
-    display: none;
+    .nav-ul {
+      display: block;
+    }
+
+    .hamburger {
+      display: none;
+    }
   }
-}
-address a{
-  font-weight: bold;
-  display: inline-block;
-}
+  address a{
+    font-weight: bold;
+    display: inline-block;
+  }
 
-.byline{
-  color: gray;
-  display: inline-block;
-}
+  .byline{
+    color: gray;
+    display: inline-block;
+  }
 
-address{
-  display: inline-block;
-}
+  address{
+    display: inline-block;
+  }
 
-time{
-  display: inline-block;
-}
+  time{
+    display: inline-block;
+  }
 
-.article-body{
-  padding-left: 1.5%;
-  padding-right: 1.5%;
-}
+  .article-body{
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+  }
 
-.pull-right{
-  float: right;
-}
+  .pull-right{
+    float: right;
+    max-width: 100%;
+  }
 
-.pull-left{
-  float: left;
-}
+  .pull-left{
+    float: left;
+    max-width: 100%;
+  }
