--- a/haley-matt/styles/layout.css
+++ b/haley-matt/styles/layout.css
@@ -1,5 +1,3 @@
-
-
 html, body {
   width: 100%;
   font-family: helvetica;
@@ -15,11 +13,17 @@ header{
 }
 
 ul {
-  /* this is a hack for collapsing space between inline block elements */
   font-size: 0;
   padding-left: 1%;
 }
 
+li {
+  font-size: 1.5rem;
+  letter-spacing: normal;
+  list-style: none;
+  display: inline-block;
+  padding: 1%;
+}
 
 address a{
   font-weight: bold;
@@ -54,24 +58,32 @@ time{
   max-width: 100%;
 } 
 
-/* .hamburger:hover .main-nav ul{
-  display: block;
-} */
-.hamburger:hover .heading-group-h1{
+.nav-ul {
   display: none;
 }
 
-@media only screen and (min-width: 640px) {
-  /* .hamburger {
-    display: none;
-    } */
+#nav-menu {
+  padding: 0;
+}
 
-  li {
-    font-size: 1.5rem;
-    letter-spacing: normal;
-    list-style: none;
-    display: inline-block;
-    padding: 1%;
+.hamburger:hover {
+  display: block;
+}
+
+#ham-menu {
+  float: right;
+}
+nav:hover .nav-ul {
+  display: block;
+} 
+
+@media only screen and (min-width: 640px) {
+  .nav-ul {
+    display: block;
+  }
+
+  .hamburger {
+    display: none;
   }
   
   a {
