styled nav on hover.

--- a/haley-matt/styles/modules.css
+++ b/haley-matt/styles/modules.css
@@ -14,8 +14,12 @@ li {
 address a{
   font-weight: bold;
   display: inline-block;
+  text-decoration: none;
 }
-
+a{
+  text-decoration: none;
+  color: gray;
+}
 .byline{
   color: gray;
   display: inline-block;
